Changement de l'icône pour le bouton "add to cart"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles/style.css">
-  <script src="https://kit.fontawesome.com/16cbe44e48.js" crossorigin="anonymous"></script>
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 
@@ -25,7 +24,7 @@
         <span class="card__price-new">$149.99</span>
         <span class="card__price-old">$169.99</span>
       </div>
-      <a class="card__buy" href=""><i class="fa-solid fa-cart-shopping"></i>Add to Cart</a>
+      <a class="card__buy" href=""><img class="card__cart" src="images/icon-cart.svg"> Add to Cart</a>
     </div>
   </main>
   <footer>
